api-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: api-deployment
  namespace: tag-api-namespace
spec:
  replicas: 3
  template:
    metadata:
      annotations:
        prometheus.io/path: /actuator/prometheus
        prometheus.io/port: "8181"
        prometheus.io/scrape: "true"
      labels:
        app: api
    spec:
      containers:
      - image: n1c0l4stournier/springboot.rest:latest
        imagePullPolicy: Always
        name: springboot-rest
        ports:
          - containerPort: 8181
