api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-service
  namespace: tag-api-namespace
spec:
  type: NodePort
  ports:
  - port: 8181
    targetPort: 8181
  selector:
    app: api
